create github pages

--- a/Error.html
+++ b/Error.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="cid-s4ciXm4rTC mbr-fullscreen mbr-parallax-background" id="header2-n">
+<section class="engine"><a href="https://mobirise.info/g">build your own website for free</a></section><section class="cid-s4ciXm4rTC mbr-fullscreen mbr-parallax-background" id="header2-n">
 
     
 
