create github pages

--- a/Error.html
+++ b/Error.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy site builder</a></section><section class="cid-s4ciXm4rTC mbr-fullscreen mbr-parallax-background" id="header2-n">
+<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="cid-s4ciXm4rTC mbr-fullscreen mbr-parallax-background" id="header2-n">
 
     
 
@@ -91,7 +91,7 @@
     <div class="container pt-5 mt-2">
         <div class=" countdown-cont align-center p-4">
             <div class="event-name align-left mbr-white ">
-                <h4 class="mbr-fonts-style display-5">Webpage Launch</h4>
+                <h4 class="mbr-fonts-style display-5">Webpage Launch Date</h4>
             </div>
             <div class="countdown align-center py-2" data-due-date="2020/08/01">
             </div>
