create github pages

--- a/Error.html
+++ b/Error.html
@@ -48,7 +48,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="countdown2 cid-s4cjxH3xmv" id="countdown2-o">
+<section class="engine"><a href="https://mobirise.info/z">best website templates</a></section><section class="countdown2 cid-s4cjxH3xmv" id="countdown2-o">
 
     
 
