--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="header4 cid-s3O3cmAyOC mbr-fullscreen mbr-parallax-background" id="header4-1">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header4 cid-s3O3cmAyOC mbr-fullscreen mbr-parallax-background" id="header4-1">
 
     
 
@@ -173,12 +173,12 @@
                     <div id="bootstrap-toggle" class="toggle-panel accordionStyles tab-content">
                         <div class="card">
                             <div class="card-header" role="tab" id="headingOne">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_9" aria-expanded="false" aria-controls="collapse1">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse1_4" aria-expanded="false" aria-controls="collapse1">
                                     <h4 class="mbr-fonts-style display-5">
                                         <span class="sign mbr-iconfont mbri-arrow-down inactive"></span> What is Glorious Net?</h4>
                                 </a>
                             </div>
-                            <div id="collapse1_9" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
+                            <div id="collapse1_4" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">This limited liability company with optimum goal has encouraged the produce and market of farm produces through joint effort of honest and selfless services to the community .</p>
                                 </div>
@@ -186,13 +186,13 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingTwo">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_9" aria-expanded="false" aria-controls="collapse2">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse2_4" aria-expanded="false" aria-controls="collapse2">
                                     <h4 class="mbr-fonts-style display-5">
                                         <span class="sign mbr-iconfont mbri-arrow-down inactive"></span> Is it good for me?</h4>
                                 </a>
 
                             </div>
-                            <div id="collapse2_9" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                            <div id="collapse2_4" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">Yes, it is good for you, if you value good health quality goods and services without regrets.</p>
                                 </div>
@@ -200,12 +200,12 @@
                         </div>
                         <div class="card">
                             <div class="card-header" role="tab" id="headingThree">
-                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_9" aria-expanded="false" aria-controls="collapse3">
+                                <a role="button" class="collapsed panel-title text-black" data-toggle="collapse" data-core="" href="#collapse3_4" aria-expanded="false" aria-controls="collapse3">
                                     <h4 class="mbr-fonts-style display-5">
                                         <span class="sign mbr-iconfont mbri-arrow-down inactive"></span> Why Glorious Net?</h4>
                                 </a>
                             </div>
-                            <div id="collapse3_9" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapse3_4" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">This is one of the best companies with &nbsp;excellent sense of humanity and integrity in production and services.</p>
                                 </div>
