Final Body Update
Reference pages wil be up in 20 days.

--- a/homepage.html
+++ b/homepage.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="header4 cid-s3O3cmAyOC mbr-fullscreen mbr-parallax-background" id="header4-1">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="header4 cid-s3O3cmAyOC mbr-fullscreen mbr-parallax-background" id="header4-1">
 
     
 
@@ -150,7 +150,7 @@
         <div class="media-container-row">
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 <ol>
-                    <li><strong>VISION</strong> - To mention an honest and selfless organization that developes the best healthy community in terms of agronomic practices to the benefit of all, while defending productivity and profitability.</li><li><strong>MISSION</strong><span style="font-size: 1rem;"> - To steadily produce and market the most ideal quality of sustainable farm produces and deliver healthy services to our communities.</span><br></li>
+                    <li><strong>VISIION</strong> - To mention an honest and selfless organization that developes the best healthy community in terms of agronomic practices to the benefit of all, while defending productivity and profitability.</li><li><strong>MISSION</strong><span style="font-size: 1rem;"> - To steadily produce and market the most ideal quality of sustainable farm produces and deliver healthy services to our communities.</span><br></li>
                 </ol>
             </div>
         </div>
@@ -241,7 +241,7 @@
             </div>
         </div>
         <!--Map-->
-        <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCy9r70T3NYf3PhvVflTo0_zdif2_IoIYs&amp;q=place_id:Eh80IEFyb2NodWt3dSBTdCwgT3dlcnJpLCBOaWdlcmlhIhoSGAoUChIJGcYj_rJZQhAREtmDrPC40Z4QBA" allowfullscreen=""></iframe></div>
+        <div class="google-map"></div>
     </div>
 </section>
 
