WebDev Address Corrected

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="header4 cid-s3O3cmAyOC mbr-fullscreen mbr-parallax-background" id="header4-1">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="header4 cid-s3O3cmAyOC mbr-fullscreen mbr-parallax-background" id="header4-1">
 
     
 
@@ -263,7 +263,7 @@
     </div>
 </section>
 
-<section once="footers" class="cid-s3OZRssrTo mbr-reveal" id="footer7-9">
+<section once="footers" class="cid-s3OZRssrTo" id="footer7-9">
 
     
 
