--- a/partnership.html
+++ b/partnership.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make your own site</a></section><section once="footers" class="cid-s3OZRssrTo mbr-reveal" id="footer7-i">
+<section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><section once="footers" class="cid-s3OZRssrTo mbr-reveal" id="footer7-i">
 
     
 
