--- a/goals.html
+++ b/goals.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a site</a></section><section once="footers" class="cid-s3OZRssrTo mbr-reveal" id="footer7-e">
+<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section once="footers" class="cid-s3OZRssrTo mbr-reveal" id="footer7-e">
 
     
 
