Futher Vision and Mission change
By Uncle Ben

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="header4 cid-s3O3cmAyOC mbr-fullscreen mbr-parallax-background" id="header4-1">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header4 cid-s3O3cmAyOC mbr-fullscreen mbr-parallax-background" id="header4-1">
 
     
 
@@ -150,7 +150,7 @@
         <div class="media-container-row">
             <div class="mbr-text counter-container col-12 col-md-8 mbr-fonts-style display-7">
                 <ol>
-                    <li><strong>VISION</strong> - We exist to feed families and the global community by becoming healthier life giving, empowering, sustainable and innovative farmers. We exist to create through empowering and organizing a global community of healthy people by feeding them fresh natural food. Our vision is to empower and save our global community one day at a time with fresh and natural food. Our vision is to mobilize and organize our community of families and their generations through sustainable back to land feeding program.</li><li><strong>MISSION</strong><span style="font-size: 1rem;"> - To dependly produce and market the most ideal quality and sustainable farm produce.&nbsp;</span><br></li>
+                    <li><strong>VISION</strong> - We exist to feed families and the global community by becoming healthier life giving, empowering, sustainable and innovative farmers.&nbsp;</li><li><strong>MISSION</strong><span style="font-size: 1rem;"> - To dependably produce and market the most ideal quality, fresh quality and sustainable farm produce.&nbsp;</span><br></li>
                 </ol>
             </div>
         </div>
